feature:[install]tcc
Change-Id: Id4ff2bc9c427b85983e57cde3149788f9460615d

--- a/install/CMakeLists.txt
+++ b/install/CMakeLists.txt
@@ -1,2 +1,3 @@
 INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../include/ DESTINATION include/ FILES_MATCHING PATTERN "*.hpp")
 INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../include/ DESTINATION include/ FILES_MATCHING PATTERN "*.h")
+INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../include/ DESTINATION include/ FILES_MATCHING PATTERN "*.tcc")
